--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,24 +1,40 @@
-blinker==1.8.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-Flask==3.0.3
-Flask-Cors==4.0.1
+alembic==1.16.4
+Authlib==1.6.2
+bcrypt==4.3.0
+blinker==1.9.0
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+cryptography==45.0.6
+defusedxml==0.7.1
+Flask==3.1.2
+Flask-Bcrypt==1.0.1
+flask-cors==6.0.1
+Flask-JWT-Extended==4.7.1
+Flask-Mail==0.10.0
+flask-marshmallow==1.3.0
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
-greenlet==3.1.1
-gunicorn==22.0.0
+fonttools==4.59.1
+fpdf2==2.8.4
+greenlet==3.2.4
+gunicorn==23.0.0
 idna==3.10
-importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
-MarkupSafe==2.1.5
+Mako==1.3.10
+MarkupSafe==3.0.2
+marshmallow==4.0.0
+marshmallow-sqlalchemy==1.4.2
 packaging==25.0
-python-dotenv==1.0.1
-requests==2.31.0
-SQLAlchemy==2.0.30
-typing_extensions==4.13.2
-urllib3==2.2.3
-Werkzeug==3.0.6
-zipp==3.20.2
-flask-limiter==3.8.0
-fpdf2
+pillow==11.3.0
+psycopg2-binary==2.9.10
+pycparser==2.22
+PyJWT==2.10.1
+python-dotenv==1.1.1
+requests==2.32.5
+SQLAlchemy==2.0.43
+typing_extensions==4.14.1
+urllib3==2.5.0
+Werkzeug==3.1.3
