replaced the deployed links

--- a/backend/.env
+++ b/backend/.env
@@ -13,7 +13,7 @@ JWT_REFRESH_EXPIRES_DAYS=30
 GOOGLE_CLIENT_ID=608296881267-256ajqnl82068thcebabo8jb3ulivrmc.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://ubora-shoes-store.onrender.com/
 # ==================================
 #      EMAIL CONFIGURATION
 # ==================================
